--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <groupId>job4j_forum</groupId>
     <artifactId>job4j_forum</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>14</maven.compiler.source>
